web-infras/parser/tests/fixtures/babel/es2015/uncategorised/373/output.txt
[SyntaxError]: Unexpect keyword in property name. (1,9)
1|const { enum } = foo();
 |       ^
